static rows with virtualization

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "compile": "babel app.js --out-file app-compiled.js",
+    "watch": "babel app.js --watch --out-file app-compiled.js",
     "start": "lite-server"
   },
   "author": "",
